--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,16 @@ dependencies:
   flutter_riverpod: ^2.3.7
   go_router: ^10.1.0
   intl: ^0.18.1
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
